feat: cursor pagination groundwork
